--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,6 @@
     <!-- API CREDENTIALS -->
     <string name="user_URL">URL here (with /api/ at the end)</string>
     <string name="app_key">Application Key Here</string>
-    <string name="api_key">API Key Here</string>
+    <string name="acs_key">Access Key Here</string>
     <string name="sec_key">Secret Key Here</string>
 </resources>
